# mwa-reduce

./: .gitignore  CMakeLists.txt  README.md  addimg.cpp  aegean2model.cpp  apparently.cpp  applybeam.cpp  applyion.cpp  applysolutions.cpp  areaset.h  autoprocess.cpp  bbs2model.cpp  beam.cpp  beamevaluator.cpp  beamevaluator.h  calibrate.cpp  calibrationmethod.cpp  calibrationmethod.h  calibrator.cpp  calibrator.h  cluster.cpp  collectionsolutions.cpp  delaunay-cgal.cpp  delaunay-cgal.h  delaunay.h  dftpredictionalgorithm.cpp  dftpredictionalgorithm.h  editmodel.cpp  fftconvolver.cpp  fftwmanager.cpp  find_lowest_values.cpp  fitsmodel.cpp  flagantennae.cpp  flagbaselines.cpp  flagionsolutions.cpp  flagmwa.cpp  flagsolutions.cpp  flagsubbands.cpp  fluxaccumulator.cpp  fluxaccumulator.h  (+64 more)
alglib/: ap.cpp
aocommon/: .gitignore  CMakeLists.txt  Doxyfile.in  Lane throughput.ods  Timings.ods  lane.h  lane_11.h  main.cpp  stopwatch.h  tcompare.cpp  threadpool.h  tlane03.cpp  tlane11.cpp  tuvector03.cpp  uvector.h  uvector_03.h
beam/: README2016  beam2016implementation.cpp  beam2016implementation.h  factorialtable.h  joneslookupdipole.cpp  joneslookupdipole.h  lnaimpedance.cpp  pycompl2cpp.cpp  recursive_lock.h  system.cpp  system.h  testimpedance.cpp  tilebeam.h  tilebeam2013.cpp  tilebeam2013.h  tilebeam2014.cpp  tilebeam2014.h  tilebeam2016.cpp  tilebeam2016.h  tilebeambase.cpp  tilebeambase.h  tileimpedance.h
beam/gpu/: factorial.c  factorial.h  jones_gpu.cu  jones_gpu.cuh  legendre.c  legendre.h
catalogue/: source-PKS2331-41-point-source.txt
deconvolution/: spectralfitter.cpp  spectralfitter.h
docker/: Ubuntu26
experiments/ionspectrum/: collectionsolutions.cpp  ionsol.cpp  ionspectrummaker.h
experiments/sed/: sedanalyser.cpp  sedanalyser.h  sedcombine.cpp
experiments/spectrummaker/: spectrummaker.cpp  spectrummaker.h
lofar/: lbeamevaluator.cpp  lmspredicter.cpp  lmspredicter.h
math/: modelrenderer.cpp  modelrenderer.h  polynomialfitter.h
model/: bbsmodel.h  measuredsed.h  modelparser.h  savedp3model.h  spectralenergydistribution.h
msproviders/: msprovider.h
mwa/: metafitsfile.cpp  metafitsfile.h  mwaconfig.h
mwa-reduce/: .gitignore  CMakeLists.txt  RaDecCoord.h  addimg.cpp  aegean2model.cpp  analysesed.cpp  angle.h  aocommon  aoimage.cpp  apparently.cpp  applybeam.cpp  applygains.cpp  applyion.cpp  applypassband.cpp  applyphaseoffsets.cpp  applyphases.cpp  applysolutions.cpp  areas.cpp  areaset.h  autoprocess.cpp  banddata.h  beam.cpp  beamevaluator.cpp  beamevaluator.h  btpimager.cpp  btpimager.h  buffered_lane.h  cachedimageset.h  calcgains.cpp  calcpassband.cpp  calcphaseoffsets.cpp  calibrate.cpp  calibrationmethod.cpp  calibrationmethod.h  calibrator.cpp  calibrator.h  clean.cpp  cleanalgorithm.cpp  cleanalgorithm.h  cluster.cpp  (+137 more)
mwa-reduce/beam/: .gitignore  README2016  beam2014test.cpp  beam2016implementation.cpp  beam2016implementation.h  beam2016test.cpp  get_jones2016.cpp  joneslookupdipole.cpp  joneslookupdipole.h  pycompl2cpp.cpp  system.cpp  test.sh  testimpedance.cpp  testtile.cpp  tilebeam.h  tilebeam2013.cpp  tilebeam2013.h  tilebeam2014.cpp  tilebeam2014.h  tilebeam2016.cpp  tilebeam2016.h  tilebeambase.cpp  tilebeambase.h  tileimpedance.cpp  tileimpedance.h  zmatrix2cpp.sh  zmatrixfits2cpp.cpp
mwa-reduce/catalogue/: make.sh  model-catalogue.txt  source-ESO362-G021-point.txt  source-cyga-7comp.txt
mwa-reduce/cleanalgorithms/: cleanalgorithm.cpp  cleanalgorithm.h  imageset.h  joinedclean.cpp  joinedclean.h  joinedpolclean.cpp  joinedpolclean.h  multiscaleclean.cpp  multiscaleclean.h  simpleclean.cpp  simpleclean.h
mwa-reduce/lofar/: lbeamevaluator.cpp  lbeamevaluator.h  lmspredicter.cpp  lmspredicter.h
mwa-reduce/model/: measuredsed.h  model.cpp  modelsource.h  spectralenergydistribution.h
mwa-reduce/models/: model-PicA-91comp.txt
mwa-reduce/msprovider/: contiguousms.cpp  contiguousms.h  msprovider.cpp  msprovider.h  partitionedms.cpp  partitionedms.h
mwa-reduce/mwa/: metafitsfile.cpp  metafitsfile.h  mwaconfig.cpp
mwa-reduce/pack/: CMakeLists-wsclean.txt  export-wsclean.sh  pack-wsclean.sh
mwa-reduce/parser/: areaparser.h  modelparser.h  votableparser.cpp  votableparser.h
mwa-reduce/scripts/: applycal.sh  cal.sh  gains.plt  oldcal.sh  phases.plt  restore.sh  subtract.sh
render/: interpolatingrenderer.cpp  interpolatingrenderer.h
scripts/: cleaniter.sh  flag.sh  gaincal.sh  imgmodel.sh  imgstokesi.sh  spect.plt
wsclean/: imagebufferallocator.h
